--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -167,7 +167,7 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contenido" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVY-b0-8KH">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contenido" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVY-b0-8KH">
                                                     <rect key="frame" x="20" y="78" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -289,95 +289,98 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="9cs-JI-j1x">
-                                    <rect key="frame" x="0.0" y="171" width="414" height="28"/>
+                                    <rect key="frame" x="0.0" y="156" width="414" height="28"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="143" id="Gl0-ir-Wpq" customClass="QuestionTableViewCell" customModule="you_say_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="143"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="128" id="Gl0-ir-Wpq" customClass="QuestionTableViewCell" customModule="you_say_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="128"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gl0-ir-Wpq" id="GU6-Dl-OrX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="142.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="127.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m79-KC-rPy">
-                                                    <rect key="frame" x="20" y="11" width="47" height="21"/>
+                                                    <rect key="frame" x="347" y="11" width="47" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-like" translatesAutoresizingMaskIntoConstraints="NO" id="fDb-dR-efu">
-                                                    <rect key="frame" x="20" y="107" width="24" height="24"/>
+                                                    <rect key="frame" x="20" y="92" width="24" height="24"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbp-Rd-QHv">
-                                                    <rect key="frame" x="52" y="108" width="38" height="21"/>
+                                                    <rect key="frame" x="52" y="93" width="38" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="report" translatesAutoresizingMaskIntoConstraints="NO" id="bm8-sV-cZ0">
-                                                    <rect key="frame" x="111" y="106" width="24" height="24"/>
+                                                    <rect key="frame" x="111" y="91" width="24" height="24"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONM-K4-phB">
-                                                    <rect key="frame" x="143" y="108" width="38" height="21"/>
+                                                    <rect key="frame" x="143" y="93" width="38" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new-answer" translatesAutoresizingMaskIntoConstraints="NO" id="AZn-y8-c7a">
-                                                    <rect key="frame" x="296" y="107" width="24" height="24"/>
+                                                    <rect key="frame" x="296" y="92" width="24" height="24"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iF3-e1-CMP">
-                                                    <rect key="frame" x="330" y="107" width="38" height="21"/>
+                                                    <rect key="frame" x="330" y="92" width="38" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contenido" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3V-PW-ehz">
-                                                    <rect key="frame" x="20" y="48" width="374" height="36"/>
+                                                    <rect key="frame" x="20" y="52" width="374" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tema" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8x-g3-d1v">
-                                                    <rect key="frame" x="352" y="11" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Categoría" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdV-Xb-Li6">
+                                                    <rect key="frame" x="20" y="11" width="84" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="UUM-YV-rt8"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="vbp-Rd-QHv" secondAttribute="bottom" constant="13.5" id="2IA-HP-rTw"/>
                                                 <constraint firstAttribute="bottom" secondItem="AZn-y8-c7a" secondAttribute="bottom" constant="11.5" id="2eG-kf-t0P"/>
-                                                <constraint firstItem="m79-KC-rPy" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="6Gy-MD-nVf"/>
+                                                <constraint firstItem="zdV-Xb-Li6" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="4iY-jq-1LJ"/>
                                                 <constraint firstAttribute="bottom" secondItem="ONM-K4-phB" secondAttribute="bottom" constant="13.5" id="6qf-Il-hJ8"/>
                                                 <constraint firstAttribute="trailing" secondItem="m3V-PW-ehz" secondAttribute="trailing" constant="20" id="79J-Hw-GrJ"/>
                                                 <constraint firstAttribute="bottom" secondItem="iF3-e1-CMP" secondAttribute="bottom" constant="14.5" id="9ct-Bp-L3k"/>
                                                 <constraint firstItem="AZn-y8-c7a" firstAttribute="leading" secondItem="bm8-sV-cZ0" secondAttribute="trailing" constant="161" id="DS4-1R-LE5"/>
+                                                <constraint firstItem="m3V-PW-ehz" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="52" id="EPk-Kl-9m3"/>
                                                 <constraint firstItem="vbp-Rd-QHv" firstAttribute="leading" secondItem="fDb-dR-efu" secondAttribute="trailing" constant="8" id="JiD-dM-QdP"/>
                                                 <constraint firstItem="fDb-dR-efu" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="NyG-Pd-Q0D"/>
                                                 <constraint firstItem="ONM-K4-phB" firstAttribute="leading" secondItem="bm8-sV-cZ0" secondAttribute="trailing" constant="8" id="PXy-C7-RtH"/>
-                                                <constraint firstAttribute="trailing" secondItem="E8x-g3-d1v" secondAttribute="trailing" constant="20" id="ReX-Zh-wCu"/>
-                                                <constraint firstItem="m79-KC-rPy" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="UHe-IK-niA"/>
                                                 <constraint firstItem="iF3-e1-CMP" firstAttribute="leading" secondItem="AZn-y8-c7a" secondAttribute="trailing" constant="10" id="WJ2-Dr-So3"/>
-                                                <constraint firstItem="E8x-g3-d1v" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="aUE-t6-5ts"/>
                                                 <constraint firstAttribute="bottom" secondItem="m3V-PW-ehz" secondAttribute="bottom" constant="58.5" id="bCD-7u-Rol"/>
-                                                <constraint firstItem="m3V-PW-ehz" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="48" id="gxk-1V-Zwp"/>
                                                 <constraint firstItem="m3V-PW-ehz" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="mXO-NY-y3b"/>
+                                                <constraint firstItem="zdV-Xb-Li6" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="oUy-Ss-Thb"/>
+                                                <constraint firstAttribute="trailing" secondItem="m79-KC-rPy" secondAttribute="trailing" constant="20" id="oyy-iL-GFF"/>
                                                 <constraint firstAttribute="bottom" secondItem="fDb-dR-efu" secondAttribute="bottom" constant="11.5" id="tI9-Im-Gos"/>
                                                 <constraint firstAttribute="bottom" secondItem="bm8-sV-cZ0" secondAttribute="bottom" constant="12.5" id="xs8-m8-PJd"/>
                                                 <constraint firstItem="bm8-sV-cZ0" firstAttribute="leading" secondItem="fDb-dR-efu" secondAttribute="trailing" constant="67" id="yYb-up-1Ei"/>
+                                                <constraint firstItem="m79-KC-rPy" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="zF6-SQ-mej"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageViewLike" destination="fDb-dR-efu" id="njM-Sp-Qf6"/>
-                                            <outlet property="labelCategory" destination="E8x-g3-d1v" id="kVn-ZR-0Lj"/>
                                             <outlet property="labelContent" destination="m3V-PW-ehz" id="JEZ-B1-CNI"/>
                                             <outlet property="labelDate" destination="m79-KC-rPy" id="qeA-Vk-ryb"/>
                                             <outlet property="labelLike" destination="vbp-Rd-QHv" id="mda-Nc-Ike"/>
                                             <outlet property="labelMessages" destination="iF3-e1-CMP" id="JTx-i5-tTu"/>
                                             <outlet property="labelReport" destination="ONM-K4-phB" id="STY-Fq-CPS"/>
+                                            <outlet property="textFieldCategory" destination="zdV-Xb-Li6" id="3qw-UD-8Ik"/>
                                             <segue destination="D5n-Oh-Yj7" kind="presentation" identifier="answerSegue" id="f7j-ge-b0e"/>
                                         </connections>
                                     </tableViewCell>
@@ -661,6 +664,6 @@
         <image name="report" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="CGk-s2-06D"/>
+        <segue reference="f7j-ge-b0e"/>
     </inferredMetricsTieBreakers>
 </document>
