--- a/you-say!/you-say!/Storyboards/Settings.storyboard
+++ b/you-say!/you-say!/Storyboards/Settings.storyboard
@@ -45,7 +45,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="W8Q-YZ-dKk">
-                                <rect key="frame" x="20" y="157" width="374" height="340"/>
+                                <rect key="frame" x="20" y="157" width="374" height="430"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lJ5-bS-JFl">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
@@ -54,8 +54,8 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hks-hL-Jpg">
-                                                        <rect key="frame" x="8" y="26" width="55" height="18"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <rect key="frame" x="8" y="26" width="55" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -87,15 +87,55 @@
                                             <constraint firstAttribute="height" constant="70" id="xfg-jU-xuz"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C31-63-e5q">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6T-wx-wOa">
                                         <rect key="frame" x="0.0" y="90" width="374" height="70"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BBF-bl-tJA">
+                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apellido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vu9-cj-88g">
+                                                        <rect key="frame" x="8" y="26" width="55" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.92520940299999999" green="0.94105452300000003" blue="0.95293647049999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstItem="vu9-cj-88g" firstAttribute="leading" secondItem="BBF-bl-tJA" secondAttribute="leading" constant="8" id="8pS-nA-Zo9"/>
+                                                    <constraint firstAttribute="width" constant="70" id="XDN-VS-3MT"/>
+                                                    <constraint firstAttribute="trailing" secondItem="vu9-cj-88g" secondAttribute="trailing" constant="7" id="Xan-Oh-QUi"/>
+                                                    <constraint firstItem="vu9-cj-88g" firstAttribute="top" secondItem="BBF-bl-tJA" secondAttribute="top" constant="26" id="j9X-kq-YJM"/>
+                                                </constraints>
+                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Nombre" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cWT-VJ-aTe">
+                                                <rect key="frame" x="78" y="20" width="273" height="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.28235294119999998" green="0.66274509800000003" blue="0.59999999999999998" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="cWT-VJ-aTe" secondAttribute="trailing" constant="23" id="52E-gj-dVq"/>
+                                            <constraint firstItem="BBF-bl-tJA" firstAttribute="leading" secondItem="N6T-wx-wOa" secondAttribute="leading" id="CSP-uQ-u5I"/>
+                                            <constraint firstAttribute="bottom" secondItem="BBF-bl-tJA" secondAttribute="bottom" id="KQe-Xy-fD9"/>
+                                            <constraint firstItem="cWT-VJ-aTe" firstAttribute="top" secondItem="N6T-wx-wOa" secondAttribute="top" constant="20" id="QFR-Mk-rY9"/>
+                                            <constraint firstItem="BBF-bl-tJA" firstAttribute="top" secondItem="N6T-wx-wOa" secondAttribute="top" id="abx-Sd-3L6"/>
+                                            <constraint firstAttribute="bottom" secondItem="cWT-VJ-aTe" secondAttribute="bottom" constant="20" id="jGZ-4w-v0h"/>
+                                            <constraint firstAttribute="height" constant="70" id="npx-n9-8zb"/>
+                                            <constraint firstItem="cWT-VJ-aTe" firstAttribute="leading" secondItem="BBF-bl-tJA" secondAttribute="trailing" constant="8" id="uqW-HM-Eti"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C31-63-e5q">
+                                        <rect key="frame" x="0.0" y="180" width="374" height="70"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u5U-Hk-VJd">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alias" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQb-sx-Oui">
-                                                        <rect key="frame" x="8" y="26" width="55" height="18"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <rect key="frame" x="8" y="26" width="55" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -128,14 +168,14 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zsx-NA-CTD">
-                                        <rect key="frame" x="0.0" y="180" width="374" height="70"/>
+                                        <rect key="frame" x="0.0" y="270" width="374" height="70"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="awj-3h-e0x">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Usuario desde" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyz-Qb-GXp">
-                                                        <rect key="frame" x="0.0" y="15" width="70" height="36"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <rect key="frame" x="0.0" y="15" width="70" height="33.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -168,14 +208,14 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xeB-aW-aGP">
-                                        <rect key="frame" x="0.0" y="270" width="374" height="70"/>
+                                        <rect key="frame" x="0.0" y="360" width="374" height="70"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uRf-cX-bES">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha nac." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2i-CG-jtG">
-                                                        <rect key="frame" x="0.0" y="15" width="70" height="36"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <rect key="frame" x="0.0" y="15" width="70" height="33.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -246,10 +286,12 @@
                         <outlet property="textFieldAlias" destination="CiY-ZU-nqD" id="PMH-4b-Rwh"/>
                         <outlet property="textFieldBirthDate" destination="n7Q-JI-HqZ" id="pFG-ST-kwH"/>
                         <outlet property="textFieldCreatedAt" destination="0Be-06-Isf" id="nFn-0k-7Tb"/>
+                        <outlet property="textFieldLastName" destination="cWT-VJ-aTe" id="s06-No-PIL"/>
                         <outlet property="textFieldName" destination="PDa-sy-X6x" id="v3Q-N0-c5b"/>
                         <outlet property="viewAlias" destination="C31-63-e5q" id="ncL-WW-NMm"/>
                         <outlet property="viewBirthDate" destination="xeB-aW-aGP" id="MAJ-EG-c3G"/>
                         <outlet property="viewCreatedAt" destination="Zsx-NA-CTD" id="529-3M-b4v"/>
+                        <outlet property="viewLastName" destination="N6T-wx-wOa" id="CDI-R4-zCG"/>
                         <outlet property="viewName" destination="lJ5-bS-JFl" id="GVE-SZ-uGE"/>
                     </connections>
                 </viewController>
